# MeasureTransfer

./: CMakeLists.txt
client/: client.h  main.cpp
common/: messages.h  types.h  utils.h
server/: communicator.h  main.cpp  server.h  session.h
